[gd_scene load_steps=6 format=3 uid="uid://bdb2jod38fulx"]

[ext_resource type="Script" uid="uid://dsyowj4lfxwto" path="res://Scripts/UI/FileManager/file_manager.gd" id="1_4banc"]
[ext_resource type="Texture2D" uid="uid://dst8ervfhipkm" path="res://UI/Assets/ZoominButton.png" id="3_bkuq8"]
[ext_resource type="Texture2D" uid="uid://dkly2qhfs7vd8" path="res://UI/Assets/ReplaceButton.png" id="4_v7138"]
[ext_resource type="Texture2D" uid="uid://8rb6kumug0p5" path="res://UI/Assets/DeleteButton.png" id="5_43ct5"]
[ext_resource type="Script" uid="uid://dpw44kfqgkx7q" path="res://Scripts/UI/FileManager/file_manager_tree.gd" id="6_h0um3"]

[node name="FileManager" type="MarginContainer"]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5
script = ExtResource("1_4banc")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="Vbox" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="PanelContainer/Vbox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "TR_FILE_MANAGER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ManageContain" type="VBoxContainer" parent="PanelContainer/Vbox"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/Vbox/ManageContain"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="AddImageButton" type="Button" parent="PanelContainer/Vbox/ManageContain/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "TR_TOOLTIP_ADD_IMAGE"
focus_mode = 0
mouse_default_cursor_shape = 2
icon = ExtResource("3_bkuq8")
expand_icon = true

[node name="ReplaceButton" type="Button" parent="PanelContainer/Vbox/ManageContain/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "TR_TOOLTIP_REPLACE_IMAGE"
focus_mode = 0
disabled = true
icon = ExtResource("4_v7138")
expand_icon = true

[node name="DeleteButton" type="Button" parent="PanelContainer/Vbox/ManageContain/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
tooltip_text = "TR_TOOLTIP_DELETE_IMAGE"
focus_mode = 0
icon = ExtResource("5_43ct5")
expand_icon = true

[node name="Margin" type="MarginContainer" parent="PanelContainer/Vbox/ManageContain"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/Vbox/ManageContain/Margin"]
layout_mode = 2
size_flags_vertical = 3

[node name="Tree" type="Tree" parent="PanelContainer/Vbox/ManageContain/Margin/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme_override_colors/guide_color = Color(0, 0, 0, 0.196078)
theme_override_colors/relationship_line_color = Color(0, 0, 0, 0.392157)
theme_override_constants/h_separation = 1
theme_override_constants/v_separation = 2
theme_override_constants/inner_item_margin_bottom = 2
theme_override_constants/inner_item_margin_left = 2
theme_override_constants/inner_item_margin_right = 2
theme_override_constants/inner_item_margin_top = 2
theme_override_constants/item_margin = 6
theme_override_constants/icon_max_width = 25
theme_override_constants/draw_guides = 2
theme_override_constants/draw_relationship_lines = 2
theme_override_constants/relationship_line_width = 2
theme_override_constants/parent_hl_line_width = 2
theme_override_constants/children_hl_line_width = 2
theme_override_constants/parent_hl_line_margin = 2
theme_override_font_sizes/font_size = 14
theme_override_font_sizes/title_button_font_size = 16
allow_reselect = true
select_mode = 2
script = ExtResource("6_h0um3")

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
initial_position = 2
size = Vector2i(400, 200)
unresizable = true
dialog_text = "Currently this image is being used by 0 sprites. Deleting it will add a Placeholder.
(Can be Replaced later)"
dialog_autowrap = true

[node name="AsAppednage" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
title = "Please Confirm!"
initial_position = 2
size = Vector2i(338, 132)
dialog_text = "Add Sprite as Appendage?"

[node name="RememberOffset" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
title = "Please Confirm!"
initial_position = 2
size = Vector2i(338, 132)
dialog_text = "Add Object with offset?
(for Trimmed Images)"

[node name="ConfirmTrim" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
initial_position = 2
size = Vector2i(375, 200)
unresizable = true
ok_button_text = "Yes"
dialog_text = "Would you like to have your Sprites Trimmed?
(Removes all unused area around your image.)"
cancel_button_text = "No"

[node name="Node" type="Node" parent="ConfirmTrim"]

[node name="OffsetSprite" type="CheckBox" parent="ConfirmTrim/Node"]
unique_name_in_owner = true
anchors_preset = -1
anchor_top = 0.735
anchor_right = 1.0
anchor_bottom = 0.735
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 8
tooltip_text = "Offsets imported Sprites when trimming is enabled."
button_pressed = true
text = "Offset Imported Sprite"
metadata/_edit_use_anchors_ = true

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
title = "Open File(s)"
initial_position = 2
size = Vector2i(800, 500)
always_on_top = true
force_native = true
ok_button_text = "Open"
cancel_button_text = "TR_CANCEL"
file_mode = 1
access = 2
filters = PackedStringArray("*.png", "*.jpeg", "*.jpg", "*.svg")
use_native_dialog = true

[connection signal="pressed" from="PanelContainer/Vbox/ManageContain/HBoxContainer/AddImageButton" to="." method="_on_add_image_button_pressed"]
[connection signal="pressed" from="PanelContainer/Vbox/ManageContain/HBoxContainer/ReplaceButton" to="." method="_on_replace_button_pressed"]
[connection signal="pressed" from="PanelContainer/Vbox/ManageContain/HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="multi_selected" from="PanelContainer/Vbox/ManageContain/Margin/ScrollContainer/Tree" to="." method="_on_tree_multi_selected"]
[connection signal="canceled" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_canceled"]
[connection signal="close_requested" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_canceled"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
[connection signal="canceled" from="AsAppednage" to="PanelContainer/Vbox/ManageContain/Margin/ScrollContainer/Tree" method="_on_as_appednage_close_requested"]
[connection signal="close_requested" from="AsAppednage" to="PanelContainer/Vbox/ManageContain/Margin/ScrollContainer/Tree" method="_on_as_appednage_close_requested"]
[connection signal="confirmed" from="AsAppednage" to="PanelContainer/Vbox/ManageContain/Margin/ScrollContainer/Tree" method="_on_as_appednage_confirmed"]
[connection signal="canceled" from="RememberOffset" to="PanelContainer/Vbox/ManageContain/Margin/ScrollContainer/Tree" method="_on_remember_offset_canceled"]
[connection signal="close_requested" from="RememberOffset" to="PanelContainer/Vbox/ManageContain/Margin/ScrollContainer/Tree" method="_on_remember_offset_canceled"]
[connection signal="confirmed" from="RememberOffset" to="PanelContainer/Vbox/ManageContain/Margin/ScrollContainer/Tree" method="_on_remember_offset_confirmed"]
[connection signal="canceled" from="ConfirmTrim" to="." method="_on_confirm_trim_canceled"]
[connection signal="close_requested" from="ConfirmTrim" to="." method="_on_confirm_trim_canceled"]
[connection signal="confirmed" from="ConfirmTrim" to="." method="_on_confirm_trim_confirmed"]
[connection signal="toggled" from="ConfirmTrim/Node/OffsetSprite" to="." method="_on_offset_sprite_toggled"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="files_selected" from="FileDialog" to="." method="_on_file_dialog_files_selected"]
